--- a/src/view/book/Checkout.fxml
+++ b/src/view/book/Checkout.fxml
@@ -8,91 +8,85 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Group xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="controller.book.CheckoutController">
+<Group xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.book.CheckoutController">
 	<children>
-		<AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0"
-			prefHeight="252.0" prefWidth="350" stylesheets="/style/PopUp.css">
+		<AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="410.0" prefWidth="580" stylesheets="/style/PopUp.css">
 			<children>
-				<BorderPane prefHeight="250.0" prefWidth="340.0"
-					stylesheets="/style/MainStyle.css" AnchorPane.bottomAnchor="0.0"
-					AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-					AnchorPane.topAnchor="0.0">
+				<BorderPane prefHeight="400.0" prefWidth="560.0" stylesheets="/style/MainStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 					<center>
-						<Pane prefHeight="250.0" prefWidth="340.0"
-							BorderPane.alignment="CENTER">
+						<Pane prefHeight="400.0" prefWidth="560.0" BorderPane.alignment="CENTER">
 							<children>
 								<GridPane layoutX="14.0" layoutY="68.0">
 									<columnConstraints>
-										<ColumnConstraints hgrow="SOMETIMES"
-											minWidth="10.0" prefWidth="100.0" />
-										<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
-											minWidth="10.0" prefWidth="100.0" />
-										<ColumnConstraints hgrow="SOMETIMES"
-											maxWidth="146.0" minWidth="10.0" prefWidth="112.0" />
+										<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+										<ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="112.0" />
+										<ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="112.0" />
+										<ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="112.0" />
+										<ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="112.0" />
 									</columnConstraints>
 									<rowConstraints>
-										<RowConstraints minHeight="10.0" prefHeight="30.0"
-											vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0"
-											vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0"
-											vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0"
-											vgrow="SOMETIMES" />
-										<RowConstraints maxHeight="30.0" minHeight="10.0"
-											prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+										<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 									</rowConstraints>
 									<children>
-										<MenuButton fx:id="mbtMember" mnemonicParsing="false"
-											onMouseClicked="#onClickedMenuButtonMember" prefHeight="25.0"
-											prefWidth="312.0" text="Select member" GridPane.columnSpan="3">
+										<MenuButton fx:id="mbtMember" mnemonicParsing="false" onMouseClicked="#onClickedMenuButtonMember" prefHeight="25.0" prefWidth="336.0" text="Select member" GridPane.columnIndex="1" GridPane.columnSpan="3">
 											<items>
 												<MenuItem mnemonicParsing="false">
 													<graphic>
-														<TextField fx:id="txtSearchMember"
-															onKeyReleased="#onKeyReleasedTextFieldSearch" prefHeight="25.0"
-															prefWidth="240.0" />
+														<TextField fx:id="txtSearchMember" onKeyReleased="#onKeyReleasedTextFieldSearch" prefHeight="25.0" prefWidth="240.0" promptText="Search by name" />
 													</graphic>
 												</MenuItem>
 												<MenuItem mnemonicParsing="false">
 													<graphic>
-														<TableView fx:id="tblMember" onMouseClicked="#onClickTableMember"
-															prefHeight="150.0" prefWidth="250.0">
+														<TableView fx:id="tblMember" onMouseClicked="#onClickTableMember" prefHeight="150.0" prefWidth="250.0">
 															<columnResizePolicy>
 																<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
 															</columnResizePolicy>
 															<columns>
-																<TableColumn fx:id="clmMemberId" prefWidth="75.0"
-																	text="ID" visible="false" />
-																<TableColumn fx:id="clmFirstName" prefWidth="102.0"
-																	text="First Name" />
-																<TableColumn fx:id="clmLastName" prefWidth="100.0"
-																	text="Last Name" />
+																<TableColumn fx:id="clmMemberId" prefWidth="75.0" text="Id" visible="false" />
+																<TableColumn fx:id="clmFirstName" prefWidth="102.0" text="First Name" />
+																<TableColumn fx:id="clmLastName" prefWidth="100.0" text="Last Name" />
 															</columns>
 														</TableView>
 													</graphic>
 												</MenuItem>
 											</items>
 										</MenuButton>
-										<Label text="ISBN:" GridPane.columnSpan="2"
-											GridPane.rowIndex="1" />
-										<TextField fx:id="txtIsbn" disable="true"
-											GridPane.columnSpan="3" GridPane.rowIndex="2" />
-										<Button fx:id="btnOK" mnemonicParsing="false"
-											onAction="#onClickButtonOK" prefHeight="25.0" prefWidth="99.0"
-											text="OK" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+										<Label text="ISBN:" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+										<TextField fx:id="txtIsbn" disable="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+										
+										<Button fx:id="btnOK" mnemonicParsing="false" onAction="#onClickButtonOK" prefHeight="25.0" prefWidth="99.0" text="OK" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+                          
+                              <TableView fx:id="tblCheckoutRecord" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="5" GridPane.rowIndex="4" GridPane.rowSpan="5">
+											<columns>
+												<TableColumn fx:id="clmIsbn" minWidth="80.0" text="ISBN" />
+													<TableColumn fx:id="clmTitle" minWidth="160.0" prefWidth="160.0" text="Title" />
+													<TableColumn fx:id="clmCopyNumber" minWidth="100.0" prefWidth="100.0" text="Copy number" />
+													<TableColumn fx:id="clmDueDate" minWidth="100.0" prefWidth="100.0" text="Due date" />
+													<TableColumn fx:id="clmCheckoutDate" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" text="Check out date" />
+												</columns>
+											
+											<columnResizePolicy>
+												<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+											</columnResizePolicy>
+										</TableView>
 									</children>
 								</GridPane>
-								<Label layoutX="92.0" layoutY="12.0" prefHeight="39.0"
-									prefWidth="176.0" text="Checkout Book" textAlignment="CENTER">
+								<Label layoutX="197.0" layoutY="12.0" prefHeight="39.0" prefWidth="176.0" text="Checkout Book" textAlignment="CENTER">
 									<font>
 										<Font name="System Bold" size="24.0" />
 									</font>
 								</Label>
-								<Button fx:id="btnClose" layoutX="319.0" layoutY="-10.0"
-									mnemonicParsing="false" onAction="#onClickButtonClose"
-									prefHeight="34.0" prefWidth="32.0" stylesheets="@../../style/btnOnText.css" />
+								<Button fx:id="btnClose" layoutX="555.0" layoutY="-17.0" mnemonicParsing="false" onAction="#onClickButtonClose" prefHeight="34.0" prefWidth="32.0" stylesheets="@../../style/btnOnText.css" />
 							</children>
 						</Pane>
 					</center>
