--- a/bin/view/book/ViewAll.fxml
+++ b/bin/view/book/ViewAll.fxml
@@ -13,9 +13,12 @@
 			<center>
 				<TableView fx:id="tblBook" onMouseClicked="#onClickTableBook" prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: none;" BorderPane.alignment="CENTER">
 					<columns>
-						<TableColumn fx:id="clmIsbn" minWidth="120.0" prefWidth="120.0" text="ISBN" />
-						<TableColumn fx:id="clmTitle" minWidth="450.0" prefWidth="450.0" text="Title" />
-						<TableColumn fx:id="clmCheckoutLength" minWidth="150.0" prefWidth="150.0" text="Check out Length " />
+						<TableColumn fx:id="clmIsbn" minWidth="100.0" prefWidth="100.0" text="ISBN" />
+						<TableColumn fx:id="clmTitle" minWidth="300.0" prefWidth="300.0" text="Title" />
+						<TableColumn fx:id="clmCopyNumber" minWidth="120.0" prefWidth="120.0" text="Number of Copy" />
+						<TableColumn fx:id="clmAuthor" minWidth="300.0" prefWidth="250.0" text="Author" />
+						<TableColumn fx:id="clmCheckoutLength" minWidth="150.0" prefWidth="150.0" text="Checkout Length " />
+					
 					</columns>
 					<columnResizePolicy>
 						<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
