--- a/src/view/Home.fxml
+++ b/src/view/Home.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.shape.*?>
 <?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
@@ -9,9 +13,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="608.0" prefWidth="871.0" stylesheets="/style/Home.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
+<AnchorPane id="AnchorPane" stylesheets="/style/Home.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
 	<children>
-		<BorderPane layoutX="262.0" layoutY="138.0" prefHeight="540.0" prefWidth="723.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+	<BorderPane layoutX="262.0" layoutY="138.0" prefHeight="540.0" prefWidth="723.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<top>
 				<AnchorPane prefHeight="111.0" prefWidth="683.0" style="-fx-border-color: #ff4e3c; -fx-border-style: solid; -fx-border-width: 0px 0px 5px;" BorderPane.alignment="CENTER">
 					<children>
@@ -24,52 +28,72 @@
 				</AnchorPane>
 			</top>
 			<center>
-				<AnchorPane prefHeight="357.0" prefWidth="683.0" BorderPane.alignment="CENTER">
+				<AnchorPane BorderPane.alignment="CENTER">
 					<padding>
-						<Insets bottom="10.0" top="10.0" />
+						<Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
 					</padding>
-					<children>
-						<HBox alignment="CENTER" layoutX="177.0" layoutY="165.0" prefHeight="344.0" prefWidth="683.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-							<children>
-								<AnchorPane prefHeight="392.0" prefWidth="648.0">
-									<children>
-										<VBox layoutX="-6.0" prefHeight="392.0" prefWidth="648.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="0.0">
-											<children>
-												<Label alignment="CENTER" prefHeight="55.0" prefWidth="641.0" text="Welcome to Maharishi University Management Library">
-													<font>
-														<Font name="System Bold" size="24.0" />
-													</font>
-												</Label>
-												<Text strokeType="OUTSIDE" strokeWidth="0.0" text="1000 North Fourth StreetFairfield, Iowa 52556" textAlignment="CENTER" wrappingWidth="647.7294921875" />
-												<Text strokeType="OUTSIDE" strokeWidth="0.0" text="(800) 532-4956 or (641) 472-1153" textAlignment="CENTER" wrappingWidth="647.7294921875" />
-											</children>
-										</VBox>
-										<GridPane layoutX="225.0" layoutY="144.0" prefHeight="100.0" prefWidth="208.0">
-											<columnConstraints>
-												<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="167.0" />
-												<ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="135.0" minWidth="7.0" prefWidth="60.0" />
-												<ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="131.0" />
-											</columnConstraints>
-											<rowConstraints>
-												<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-												<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-											</rowConstraints>
-											<children>
-												<Label text="Total members :" GridPane.rowIndex="1" />
-												<Label text="Total books :">
-													<font>
-														<Font size="12.0" />
-													</font>
-												</Label>
-												<Label fx:id="lblTotalBook" text="0" GridPane.columnIndex="1" GridPane.columnSpan="2" />
-												<Label fx:id="lblTotalMember" text="0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-											</children>
-										</GridPane>
-									</children>
-								</AnchorPane>
-							</children>
-						</HBox>
-					</children>
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fabb3d" height="95.0" layoutX="546.0" layoutY="262.0" stroke="TRANSPARENT" strokeType="INSIDE" width="251.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#67c2ef" height="91.0" layoutX="543.0" layoutY="150.0" stroke="TRANSPARENT" strokeType="INSIDE" width="250.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff5454" height="90.0" layoutX="544.0" layoutY="42.0" stroke="TRANSPARENT" strokeType="INSIDE" width="250.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79c447" height="95.0" layoutX="545.0" layoutY="378.0" stroke="TRANSPARENT" strokeType="INSIDE" width="251.0" />
+                  <PieChart fx:id="graphPieChart" layoutX="42.0" layoutY="38.0" prefHeight="334.0" prefWidth="418.0" />
+                  <Text fill="#f2f2f2" layoutX="634.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Books">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#f2f2f2" layoutX="615.0" layoutY="298.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Members">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#f2f2f2" layoutX="637.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Staffs">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#019cd0" layoutX="33.0" layoutY="430.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Library Manager">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Text>
+                  <Label layoutX="33.0" layoutY="447.0" text="1000 N 4th St, Fairfield, IA 52557" textFill="#000000cd">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="33.0" layoutY="467.0" text="+1-641-451-3077" textFill="#000000cd">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblTotalBook" layoutX="648.0" layoutY="185.0" text="12" textFill="#f8f8f8">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblTotalMember" layoutX="645.0" layoutY="299.0" text="12" textFill="#f8f8f8">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblTotalStaff" layoutX="646.0" layoutY="418.0" text="12" textFill="#f8f8f8">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblTotalOverdueBook" layoutX="648.0" layoutY="72.0" text="12" textFill="#f8f8f8">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
+                  <Text fill="#f2f2f2" layoutX="591.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Overdue Book">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
+               </children>
 				</AnchorPane>
 			</center>
 			<padding>
@@ -78,6 +102,13 @@
 			<bottom>
 				<AnchorPane prefHeight="85.0" prefWidth="683.0" style="-fx-border-color: ff4e3c; -fx-border-width: 5px 0px 0px 0px; -fx-bo: ;" BorderPane.alignment="CENTER" />
 			</bottom>
-		</BorderPane>
+         <left>
+            <AnchorPane prefHeight="507.0" prefWidth="255.0" BorderPane.alignment="CENTER" />
+         </left>
+         <right>
+            <AnchorPane prefHeight="507.0" prefWidth="140.0" BorderPane.alignment="CENTER" />
+         </right>
+
+</BorderPane>
 	</children>
 </AnchorPane>
